<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainColor"
    tools:context=".ui.mainScreens.WalletFragment">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/mainColor"
            tools:context=".ui.mainScreens.WalletFragment">

            <androidx.cardview.widget.CardView
                android:id="@+id/materialCardView"
                android:layout_width="303dp"
                android:layout_height="156dp"
                android:layout_marginTop="50dp"
                android:background="@color/mainColor"
                app:cardCornerRadius="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/my_crypto_bg">

                    <TextView
                        android:id="@+id/totalBalance"
                        android:layout_width="210dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="32dp"
                        android:gravity="center"
                        android:text=""
                        android:textColor="@color/green"
                        android:textSize="18sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.497"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView7" />

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/totalBalance"
                        android:textColor="#7A7781"
                        android:textSize="25sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.497"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ProgressBar
                        android:id="@+id/progressBarUserBalance"
                        style="?android:attr/progressBarStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.498"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.629" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="210dp"
                android:layout_height="55dp"
                android:layout_marginTop="21dp"
                android:gravity="center"
                android:text="@string/fragmentWalletTitle"
                android:textColor="@color/white"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/deposit"
                android:layout_width="109dp"
                android:layout_height="52dp"
                android:layout_marginTop="35dp"
                android:background="@drawable/deposit_bg"
                android:text="@string/depositButtonText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/withdraw"
                app:layout_constraintTop_toBottomOf="@+id/materialCardView" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/withdraw"
                android:layout_width="109dp"
                android:layout_height="52dp"
                android:layout_marginTop="35dp"
                android:background="@drawable/withdraw_background"
                android:text="@string/withdrawButtonText"
                app:layout_constraintEnd_toStartOf="@+id/deposit"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/materialCardView" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="210dp"
                android:layout_height="55dp"
                android:layout_marginTop="42dp"
                android:background="@drawable/my_crypto_bg"
                android:gravity="center"
                android:text="@string/myCryptosInfo"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/deposit" />

            <TextView
                android:visibility="invisible"
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="5dp"
                android:text="@string/coinNameText"
                android:textColor="@color/walletRecyclerTitle"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/recyclerViewMyCrypto"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:visibility="invisible"
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginBottom="5dp"
                android:text="@string/coinAmountText"
                android:textColor="@color/walletRecyclerTitle"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/recyclerViewMyCrypto"
                app:layout_constraintStart_toEndOf="@+id/textView6" />

            <TextView
                android:visibility="invisible"
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginBottom="5dp"
                android:text="@string/coinProfitText"
                android:textColor="@color/walletRecyclerTitle"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/recyclerViewMyCrypto"
                app:layout_constraintStart_toEndOf="@+id/textView8" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewMyCrypto"
                android:layout_width="407dp"
                android:layout_height="222dp"
                android:layout_marginTop="56dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"

                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView9" />

            <ProgressBar
                android:id="@+id/progressBarUserCoins"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView9" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/deleteAccountBtn"
                android:layout_width="89dp"
                android:layout_height="39dp"
                android:background="@drawable/withdraw_background"
                android:text="Delete Account"
                app:layout_constraintBottom_toTopOf="@+id/materialCardView"
                app:layout_constraintEnd_toEndOf="@+id/materialCardView"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
